--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -1,16 +1,17 @@
 <footer>
     <div class="footer_container">
-      <div class="about_content">
-        <p>
- Powered by :         
- <a class="contact_phone">
-            <span>Barcode India</span></a >
-        </p>
-      </div>
-      <div class="social">
-          Version 1.0
+      
+    <div class="about">
+  <p>{{siteData.footer.about}}<a class="company">
+  <span>{{siteData.footer.company}}</span>
+  </a ></p>
+   </div>
+
+      <div class="version">
+          {{siteData.footer.version}}
       </div>  
-      <p>© 2022 Te Connect | All rights reserved.</p>
+      
+      <p>{{siteData.footer.copyright}}</p>
     </div>
   </footer>
   
