--- a/src/app/home/footer/footer.component.scss
+++ b/src/app/home/footer/footer.component.scss
@@ -1,67 +1,21 @@
 @import "../../../assets/sass/main.scss";
 
 .footer_container {
-  background: #07112d;
-  padding: 50px 0;
-  @media only screen and (max-width: $tablet) {
-    background: white;
-    padding: 0;
-  }
-
-  .footer_image {
-    width: 120px;
-    height: 120px;
-    margin: 0 auto;
-    @media only screen and (max-width: $tablet) {
-      display: none;
-    }
-    @media only screen and (max-width: 769px) {
-      display: block;
-
-      width: 60px;
-      height: 60px;
-    }
-    @media only screen and (max-width: 580px) {
-      width: 50px;
-      height: 50px;
-    }
-
-    &__block {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  .about_content {
-    display: flex;
-    justify-content: center;
-    margin: 32px 0 40px 0;
-    align-items: center;
-    letter-spacing: 1px;
-    @media only screen and (max-width: $tablet) {
-      display: none;
-    }
-
-    .contact_us {
+  padding: 16px 0;
+   text-align: center;
+   color: #a99fc5;
+   letter-spacing: 1px;
+  
+  .about {
+    margin: 24px 0 28px 0;
+    color:gray;
+    font-weight: 500;
+   p {
       font-size: 16px;
-      font-weight: 600;
-      width: 310px;
-      text-align: center;
-      color: #ffffff;
-    }
-    p {
-      width: 310px;
-      text-align: center;
-      font-size: 16px;
-      color: #ffffff;
     }
     a {
-      width: 310px;
       text-decoration: none;
-      text-align: center;
-      color: #ffffff;
       span {
-        cursor: pointer;
-        color: #a99fc5;
         position: relative;
       }
       span:before {
@@ -71,7 +25,7 @@
         height: 1px;
         bottom: 0;
         left: 0;
-        background-color: #fff;
+        background-color: #ccc9d4;
         visibility: hidden;
         transition: all 0.3s ease-in-out;
       }
@@ -79,48 +33,15 @@
         visibility: visible;
         width: 100%;
       }
-      span:hover {
-        color: #ffffff;
-      }
     }
   }
-  .social {
-    color: #a99fc5;
-    text-align: center;
+  .version {
     font-size: 14px;
-    margin: 0px 0 22px 0;
-    @media only screen and (max-width: 1180px) {
-      margin: 0px 0 8px 0;
-    }
-    @media only screen and (max-width: 580px) {
-      margin: 0px 0 4px 0;
-    }
-
+    margin: 0px 0 13px 0;
   }
   p {
-    // cursor: default;
-    color: #a99fc5;
-    text-align: center;
-    letter-spacing: 1px;
     word-spacing: 2px;
-    font-size: 14px;
-    @media only screen and (max-width: 1180px) {
-      color: #44475b;
-      letter-spacing: 0.3px;
-      word-spacing: 1.6px;
-      font-size: 13.7px;
-    }
-    @media only screen and (max-width: 880px) {
-      font-size: 13px;
-    }
+    font-size: 14px;  
+  }
 
-    @media only screen and (max-width: 580px) {
-      font-size: 12px;
-    }
-  }
-  @media only screen and (min-width: 1180px) {
-    p:hover {
-      color: #ffffff;
-    }
-  }
 }
