--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,16 +33,8 @@
 }
 
 .body_styling {
-  // font-family: poppins;
   padding-top: 70px;
-
-  @media only screen and (min-width: 1500px) {
-    padding-top: 84px;
-  }
-  @media only screen and (max-width: 1180px) {
-    padding-top: 82px;
-  }
-  @media only screen and (max-width: 580px) {
-    padding-top: 61px;
-  }
+//  @media only screen and (max-width: 580px) {
+//     padding-top: 60px;
+//   }
 }
