--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,17 +1,44 @@
-<p *ngFor="let key of Object.keys(siteData.menu)">{{key}}</p>
-<p *ngFor="let key of Object.keys(siteData.menu.Menu[0])">{{key}}</p>
+<!-- <p *ngFor="let key of Object.keys(siteData.menu)">{{key}}</p> -->
 
-<div *ngFor="let reports of siteData.menu.Menu[0].Reports " >
-<div *ngFor="let key of Object.keys(reports)"><a 
-    *ngFor="let value of Object.values(reports)"  
-    routerLink="/menu/{{value}}">{{key}}</a></div>
+
+<!-- <p class="reports_list" *ngFor="let reports_list of Object.keys(siteData.menu.Menu[0])">{{reports_list}}</p>
+
+<div class="reports" *ngFor="let reports of siteData.menu.Menu[0].Reports " >
+<div class="reports_names" *ngFor="let reports_names of Object.keys(reports)"><a 
+    *ngFor="let reports_link of Object.values(reports)"  
+    routerLink="/menu/{{reports_link}}">{{reports_names}}</a></div>
+</div> -->
+
+<div class="navbuttons_container">
+   
+<div class="dropdown">
+  <div class="navbuttons">
+    <a
+      class="navbuttons_link"
+      *ngFor="let reports_list of Object.keys(siteData.menu.Menu[0])"
+      >{{ reports_list }}</a
+    >
+  </div>
+  <div class="dropdown-content">
+    <!-- <a
+      class="navbuttons_link"
+      routerLinkActive="myactive active"
+      routerLink="{{ companyField.companyNav[1] }}"
+      *ngFor="let companyField of siteData.header.navbuttons[1].Company"
+      >{{ companyField.companyNav[0] }}</a
+    > -->
+    <div class="reports" *ngFor="let reports of siteData.menu.Menu[0].Reports " >
+      <div class="reports_names" *ngFor="let reports_names of Object.keys(reports)"><a 
+          *ngFor="let reports_link of Object.values(reports)"  
+          routerLink="/menu/{{reports_link}}">{{reports_names}}</a></div>
+      </div>
+      
+  </div>
 </div>
-
+</div>
 <router-outlet></router-outlet>
 
-
-
-<div class="phone_hamburger">
+<!-- <div class="phone_hamburger">
     <div class="menu_hamburger">
       <nav role="navigation">
         <div id="menuToggle">
@@ -20,12 +47,10 @@
           <span></span>
           <span></span>
           <ul id="menu">
-            <!-- <div class="menu_green">{{siteData.menu}}</div> -->
             <div class="menu_dash">
               <a
                 class="menu_dashboard"
                >
-                <!-- <div>{{ sum }}</div> -->
                 <li>
                   ₹{{ siteData.menu }}
                   <br />
@@ -33,25 +58,9 @@
                 </li></a
               >
             </div>
-
-            <!-- <a
-              class="navbuttons_link"
-              routerLink="{{ menuField.hamburgerNav[1] }}"
-              *ngFor="
-                let menuField of siteData.header.menuHamburger.hamburgerNavs;
-                index as a
-              "
-              ><li>{{ menuField.hamburgerNav[0] }}</li></a
-            > -->
-            <!-- <app-footer></app-footer> -->
-          </ul>
+</ul>
         </div>
       </nav>
     </div>
-    <!-- <div class="header_menu_container">
-      <div class="header_icon">
-        <img class="header_icon__block" [src]="siteData.header.logo" />
-      </div>
-      <p>{{ siteData.header.name }}</p>
-    </div> -->
   </div>
+   -->
