--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,38 +1,43 @@
 @import "../../assets/sass/main.scss";
-.reports_list{
-    text-align: center;
-    margin: 60px 0 51px 0;
-    color: #051441;
-    font-size: 18px;
-    font-weight: 600;
-}
+
 .navbuttons_container {
-    display: flex;
-    justify-content: center;
-    
-.dropdown {
+  text-align: center;
+  margin-top: 50px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid transparent;
+  border-image: linear-gradient(
+    0.25turn,
+    rgba(56, 2, 155, 0),
+    #d1cce0,
+    rgba(56, 2, 155, 0)
+  );
+  border-image-slice: 1;
+  .dropdown {
     position: relative;
     display: inline-block;
-    // float: left;
   }
-
   .dropdown-content {
     display: none;
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 220px;
     position: absolute;
     background-color: white;
-    min-width: 160px;
+    min-width: 240px;
     box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
     z-index: 1;
     padding-top: 20px;
     border-radius: 4px;
   }
+  .reports {
+    text-align: left;
+  }
 
   .dropdown-content a {
     font-weight: 600;
     font-size: 15px;
-    // font-family: poppins;
     color: #051441;
-    padding: 10px 14px;
+    padding: 12px 20px;
     text-decoration: none;
     display: block;
     @media only screen and (min-width: $web) {
@@ -56,7 +61,7 @@
       color: #051441;
       text-decoration: none;
       font-weight: 600;
-      // font-family: poppins;
+      font-size: 17px;
     }
   }
 }
@@ -70,240 +75,12 @@
   color: #e93229;
 }
 
-//   .phone_hamburger {
-//     // display: none;
-//     @media only screen and (max-width: $tablet) {
-//       margin: 11px 10px 0;
-//       box-shadow: rgb(0 0 0 / 10%) 0px 0px 5px 0px,
-//         rgb(0 0 0 / 10%) 0px 0px 1px 0px;
-//       border-radius: 5px;
-//       background: white;
-//       display: flex;
-//       justify-content: space-between;
-//     }
-//     @media only screen and (max-width: 580px) {
-//       margin: 9px 10px 0;
-//     }
-//   }
-//   .menu_hamburger {
-//     // display: none;
-//     height: 700px;
-//     @media only screen and (max-width: $tablet) {
-//       width: 36%;
-//       display: block;
-//     }
-//   }
-
-//   #menuToggle {
-//     display: block;
-//     position: relative;
-//     top: 25px;
-//     left: 32px;
-//     width: 50px;
-//     z-index: 1;
-//     @media only screen and (max-width: 770px) {
-//       top: 28px;
-//     }
-//     @media only screen and (max-width: 580px) {
-//       top: 18.4px;
-//       left: 30px;
-//     }
-//   }
-
-//   #menuToggle a {
-//     text-decoration: none;
-//     color: #051441;
-
-//     transition: color 0.3s ease;
-//   }
-
-//   #menuToggle a:hover {
-//     color: #e93229;
-//   }
-
-//   #menuToggle input {
-//     display: block;
-//     width: 40px;
-//     height: 32px;
-//     position: absolute;
-//     top: -7px;
-//     left: -5px;
-
-//     cursor: pointer;
-
-//     opacity: 0; /* hide this */
-//     z-index: 2; /* and place it over the hamburger */
-
-//     -webkit-touch-callout: none;
-//   }
-
-//   /*
-//  * Just a quick hamburger
-//  */
-//   #menuToggle span {
-//     display: block;
-//     width: 29px;
-//     height: 3.9px;
-//     margin-bottom: 4px;
-//     position: relative;
-//     @media only screen and (max-width: 780px) {
-//       width: 24px;
-//       margin-bottom: 2.8px;
-//       height: 3.5px;
-//     }
-//     @media only screen and (max-width: 580px) {
-//       width: 20px;
-//       margin-bottom: 2.8px;
-//       height: 2.5px;
-//     }
-//     background: #051441;
-//     border-radius: 3px;
-
-//     z-index: 1;
-
-//     transform-origin: 4px 0px;
-
-//     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-//       background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-//   }
-
-//   #menuToggle span:first-child {
-//     transform-origin: 0% 0%;
-//   }
-
-//   #menuToggle span:nth-last-child(2) {
-//     transform-origin: 0% 100%;
-//   }
-
-//   /* 
-//  * Transform all the slices of hamburger
-//  * into a crossmark.
-//  */
-//   //remove hover and write checked upto menu below and remove below comments
-//   #menuToggle input:checked ~ span {
-//     opacity: 1;
-//     transform: rotate(45deg) translate(-2px, -1px);
-//     background: #051441;
-//     // opacity: 0;
-//     // transform: rotate(0deg) scale(0.2, 0.2);
-//   }
-
-//   /*
-//  * But let's hide the middle one.
-//  */
-//   #menuToggle input:checked ~ span:nth-last-child(3) {
-//     opacity: 0;
-//     transform: rotate(0deg) scale(0.2, 0.2);
-//   }
-
-//   /*
-//  * Ohyeah and the last one should go the other direction
-//  */
-//   #menuToggle input:checked ~ span:nth-last-child(2) {
-//     transform: rotate(-45deg) translate(0, -1px);
-//     // opacity: 0;
-//     // transform: rotate(0deg) scale(0.2, 0.2);
-//   }
-
-//   /*
-//  * Make this absolute positioned
-//  * at the top left of the screen
-//  */
-//   #menu {
-//     position: absolute;
-//     // width: 100%;
-//     // padding-bottom: 1000% !important;
-//     margin: -100px 0 0 -50px;
-//     padding: 0 100px;
-//     padding-top: 58px;
-//     // padding-top: 84px;
-//     background: white;
-//     list-style-type: none;
-//     -webkit-font-smoothing: antialiased;
-//     /* to stop flickering of text in safari */
-
-//     transform-origin: 0% 0%;
-//     transform: translate(-100%, 0);
-
-//     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-//     @media only screen and (max-width: 880px) {
-//       padding-left: 40px;
-//     }
-//     @media only screen and (max-width: 580px) {
-//       padding-left: 33px;
-//     }
-//     .menu_green {
-//       margin-top: 21px;
-//       color: lightgray;
-//       font-size: 16px;
-//       @media only screen and (max-width: 580px) {
-//         font-size: 15px;
-//       }
-//     }
-//     .menu_dash {
-//       .menu_dashboard {
-//         li {
-//           color: #e93229;
-//         }
-//       }
-//     }
-//   }
-
-//   #menu li {
-//     margin: 56px 0;
-//     font-size: 16px;
-//     font-weight: 500;
-//     @media only screen and (max-width: 880px) {
-//       font-size: 15px;
-//       margin: 46px 0;
-//     }
-//     @media only screen and (max-width: 580px) {
-//       margin: 36px 0;
-//     }
-//   }
-
-//   /*
-//  * And let's slide it in from the left
-//  */
-//   #menuToggle input:checked ~ ul {
-//     transform: none;
-//   }
-//   .header_menu_container {
-//     display: flex;
-//     align-items: center;
-//     margin-right: 70px;
-//     height: 70px;
-//     @media only screen and (max-width: 1180px) {
-//       margin-right: 60px;
-//     }
-
-//     @media only screen and (max-width: 770px) {
-//       margin-right: 50px;
-//     }
-//     @media only screen and (max-width: 580px) {
-//       margin-right: 30px;
-//       height: 50px;
-//     }
-//     .header_icon {
-//       width: 73px;
-//       height: 70px;
-//       margin-right: 4px;
-//       &__block {
-//         width: 100%;
-//         height: 100%;
-//       }
-//       @media only screen and (max-width: $mobile) {
-//         display: none;
-//       }
-//     }
-//     p {
-//       font-family: Comic Sans MS;
-//       color: #e93229;
-//       font-size: 19px;
-//       font-weight: 300;
-//       @media only screen and (max-width: 580px) {
-//         font-size: 17px;
-//       }
-//     }
-//   }
-
+.report_content {
+  margin: 40px;
+  height: 500px;
+  background-image: url("../../assets/jpg/report_content_bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 13px;
+  opacity: 0.7;
+}
