--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -78,9 +78,9 @@
 .report_content {
   margin: 40px;
   height: 500px;
-  background-image: url("../../assets/jpg/report_content_bg.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  // background-image: url("../../assets/jpg/report_content_bg.jpg");
+  // background-repeat: no-repeat;
+  // background-size: cover;
   border-radius: 13px;
   opacity: 0.7;
 }
