--- a/src/app/menu/rejectedmaterialmaster/rejectedmaterialmaster.component.scss
+++ b/src/app/menu/rejectedmaterialmaster/rejectedmaterialmaster.component.scss
@@ -1,10 +1,15 @@
-table, th, td {
-    border: 1px solid black;
+table {
+  width: 100%;
+  border: 1px solid lightgray;
+  border-radius: 8px;
+}
+
+td {
+  text-align: center;
+}
+
+table,
+th,
+td {
+  padding: 10px 0;
   }
-table{
-    width: 100%;
-    border-collapse: collapse;
-}
-td{
-    text-align: center;
-}
