--- a/src/app/menu/rejectedmaterialmaster/rejectedmaterialmaster.component.html
+++ b/src/app/menu/rejectedmaterialmaster/rejectedmaterialmaster.component.html
@@ -3,13 +3,13 @@
     <thead>  
         <tr>  
           <th  class="table_heading" *ngFor="
-          let columnNames of siteData.Reports.RejectedMaterial[0] | keyvalue
+          let columnNames of siteData.Reports.RejectedMaterial[0] | keyvalue: returnZero
         ">{{columnNames.key}}</th>  
     </tr>  
     </thead>
     <tbody>  
         <tr *ngFor="let arr of siteData.Reports.RejectedMaterial">  
-          <td *ngFor="let data of arr | keyvalue">{{ data.value }}</td>
+          <td *ngFor="let data of arr | keyvalue: returnZero">{{ data.value }}</td>
         </tr>  
       </tbody>  
 </table>  
