--- a/src/app/menu/rejectedmaterialmaster/rejectedmaterialmaster.component.scss
+++ b/src/app/menu/rejectedmaterialmaster/rejectedmaterialmaster.component.scss
@@ -1,15 +1,15 @@
-table {
-  width: 100%;
-  border: 1px solid lightgray;
-  border-radius: 8px;
-}
+// table {
+//   width: 100%;
+//   border: 1px solid lightgray;
+//   border-radius: 8px;
+// }
 
-td {
-  text-align: center;
-}
+// td {
+//   text-align: center;
+// }
 
-table,
-th,
-td {
-  padding: 10px 0;
-  }
+// table,
+// th,
+// td {
+//   padding: 10px 0;
+//   }
