--- a/src/app/menu/charts/charts.component.html
+++ b/src/app/menu/charts/charts.component.html
@@ -1,8 +1,10 @@
-<div class="chart_container">
-    <canvas id="myChart"  ></canvas>
-    <canvas id="chart2"  ></canvas>
-    <!-- <canvas id="chart3"  ></canvas> -->
-
+<div
+  data-aos-once="true"
+  data-aos="zoom-in"
+  data-aos-delay="100"
+  class="chart_container"
+>
+  <canvas id="myChart"></canvas>
+  <canvas id="chart2"></canvas>
+  <!-- <canvas id="chart3"  ></canvas> -->
 </div>
-
- <!-- <p>hhh</p> -->
