--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -4,7 +4,7 @@
   width: 100%;
 }
 .navbuttons_container {
-  width:20%;
+  width: 20%;
   margin-top: 50px;
   height: 400px;
   .home_container {
@@ -37,7 +37,7 @@
     display: none;
     overflow-x: hidden;
     overflow-y: auto;
-    height: 180px;
+    height: 148px;
     position: absolute;
     background-color: white;
     // min-width: 240px;
@@ -90,15 +90,75 @@
 
 .report_content_container {
   width: 80%;
-  // height: 500px;
   border-radius: 13px;
   // opacity: 0.7;
-.report_content{
-  margin: 72px 20px 50px 20px
+  .report_content {
+    margin: 72px 20px 0px 20px;
+    padding-bottom: 50px;
+  }
+  h4 {
+    font-size: 15px;
+    color: gray;
+  }
+}
 
+//
+:host ::ng-deep input {
+  font-weight: 500;
+  padding: 10px 15px;
+  border-radius: 30px;
+  border: 1px solid #e1e1e3;
+  font-size: 14px;
+  color: #051441;
+  margin-bottom: 20px;
+  }
+:host ::ng-deep input:focus {
+  border: 1px solid #4154f1;
 }
-h4{
-  font-size: 15px;
-  color: gray;
+
+//
+:host ::ng-deep table {
+  width: 100%;
+  border: 1.2px solid #d3d3d35e;
+  // border-collapse: collapse;
+  // border-spacing: 0;
+  border-radius: 8px;
 }
+:host ::ng-deep th {
+  padding: 10px 0;
+  border: 1.2px solid #d3d3d35e;
+  // border-collapse: collapse;
+}
+:host ::ng-deep td {
+  text-align: center;
+  padding: 10px 0;
+  border: 1.2px solid #d3d3d35e;
+  // border-collapse: collapse;
+}
+
+//
+:host ::ng-deep pagination-controls {
+  position: absolute;
+  z-index: 3;
+  background: white;
+  // bottom: 0;
+  margin-top: 10px;
+  right: 0;
+  border-radius: 15px;
+}
+:host ::ng-deep .ngx-pagination {
+  .current {
+    border-radius: 30px;
+    background: #faeea9;
+    padding: 4px 9px;
+    color: #e93229;
+  }
+  a {
+    padding: 4px 9px;
+  }
+  a:hover {
+    border-radius: 30px;
+    background: #faeea9;
+    color: #e93229;
+  }
 }
