--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -49,3 +49,6 @@
     </div>
   </div>
 </div>
+<div class="bottom_to_top">
+<p class="bottom_to_top__block" *ngIf="isShow" (click)="gotoTop()">^</p>
+</div>
