--- a/src/app/menu/processdetailmaster/processdetailmaster.component.html
+++ b/src/app/menu/processdetailmaster/processdetailmaster.component.html
@@ -18,7 +18,7 @@
           {{ columnNames.key }}
           <span
             (click)="setOrder(columnNames.key)"
-            [ngStyle]="{ color: arrow ? '#e93229' : '#faeea9' }"
+            [ngStyle]="{ color: arrow ? '#00d09c' : '#faeea9' }"
             >{{ reverse ? "▼" : "▲" }}</span
           >
         </th>
