--- a/src/app/menu/rejectedmaterialmaster/rejectedmaterialmaster.component.html
+++ b/src/app/menu/rejectedmaterialmaster/rejectedmaterialmaster.component.html
@@ -1,4 +1,4 @@
-<table data-aos-once="true" data-aos="zoom-in" data-aos-delay="100">
+<!-- <table data-aos-once="true" data-aos="zoom-in" data-aos-delay="100">
   <thead>
     <tr>
       <th
@@ -19,4 +19,4 @@
       </td>
     </tr>
   </tbody>
-</table>
+</table> -->
