--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -50,6 +50,6 @@
   </div>
 </div>
 <div class="bottom_to_top">
-  <!-- <p class="bottom_to_top__block" *ngIf="isShow" (click)="gotoTop()">^</p> -->
-  <p class="bottom_to_top__block" (click)="gotoTop()">^</p>
+  <p class="bottom_to_top__block" *ngIf="isShow" (click)="gotoTop()">^</p>
+  <!-- <p class="bottom_to_top__block" (click)="gotoTop()">^</p> -->
 </div>
