--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -35,7 +35,8 @@
   </div>
   <div class="report_content_container">
     <div class="report_content">
-      <h4
+      <div
+        class="menu_heading"
         data-aos-once="true"
         data-aos="fade-up"
         data-aos-delay="100"
@@ -44,7 +45,7 @@
         This application is for Hero MotoCorp
         <br />
         Please use navigation tabs to perform an action
-      </h4>
+      </div>
       <router-outlet></router-outlet>
     </div>
   </div>
