--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -93,12 +93,14 @@
   border-radius: 13px;
   color: #051441;
   .report_content {
-    margin: 72px 20px 0px 20px;
+    margin: 46px 20px 0px 20px;
     padding-bottom: 50px;
   }
-  h4 {
+  .menu_heading {
     font-size: 15px;
     color: gray;
+    font-weight: 700;
+    padding-top: 70px;
   }
 }
 
