--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,3 +1,4 @@
+<div class="main_page">
 <div class="menu">
   <div class="navbuttons_container">
     <div class="home_container">
@@ -52,4 +53,5 @@
 </div>
 <div class="bottom_to_top">
   <p class="bottom_to_top__block" *ngIf="isShow" (click)="gotoTop()">^</p>
+</div>
 </div>
