--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,4 +1,8 @@
 @import "../../assets/sass/main.scss";
+.main_page {
+  position: relative;
+  margin-bottom: 50px;
+}
 .menu {
   display: flex;
   width: 100%;
@@ -93,8 +97,8 @@
   border-radius: 13px;
   color: #051441;
   .report_content {
-    margin: 46px 20px 0px 20px;
-    padding-bottom: 50px;
+    margin: 46px 20px 50px 20px;
+    // padding-bottom: 50px;
   }
   .menu_heading {
     font-size: 15px;
@@ -105,10 +109,10 @@
 }
 
 .bottom_to_top {
+  position: absolute;
+  bottom: 0;
   width: 34px;
   height: 34px;
-  align-items: center;
-  margin-bottom: 20px;
   margin-left: 70px;
   cursor: pointer;
   &__block {
@@ -161,12 +165,15 @@
   position: absolute;
   z-index: 3;
   background: white;
-  // bottom: 0;
-  margin-top: 10px;
-  right: 0;
+  margin-top: 20px;
   border-radius: 15px;
 }
 :host ::ng-deep .ngx-pagination {
+  .pagination-previous,.pagination-next{
+    a{
+      color: gray;
+    }
+  }
   .current {
     border-radius: 30px;
     background: #faeea9;
@@ -175,6 +182,9 @@
   }
   a {
     padding: 4px 9px;
+    span{
+      color: gray;
+    }
   }
   a:hover {
     border-radius: 30px;
