--- a/src/app/protected/components/menu/menu.component.scss
+++ b/src/app/protected/components/menu/menu.component.scss
@@ -1,4 +1,4 @@
-@import "../../assets/sass/main.scss";
+@import "../../../../assets/sass/main.scss";
 .main_page {
   position: relative;
   margin-bottom: 50px;
@@ -44,7 +44,6 @@
     height: 148px;
     position: absolute;
     background-color: white;
-    // min-width: 240px;
     width: 100%;
     box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
     z-index: 1;
@@ -98,7 +97,6 @@
   color: #051441;
   .report_content {
     margin: 46px 20px 50px 20px;
-    // padding-bottom: 50px;
   }
   .menu_heading {
     font-size: 15px;
@@ -144,20 +142,16 @@
 :host ::ng-deep table {
   width: 100%;
   border: 1.2px solid #d3d3d35e;
-  // border-collapse: collapse;
-  // border-spacing: 0;
   border-radius: 8px;
 }
 :host ::ng-deep th {
   padding: 10px 0;
   border: 1.2px solid #d3d3d35e;
-  // border-collapse: collapse;
 }
 :host ::ng-deep td {
   text-align: center;
   padding: 10px 0;
   border: 1.2px solid #d3d3d35e;
-  // border-collapse: collapse;
 }
 
 //
@@ -169,8 +163,9 @@
   border-radius: 15px;
 }
 :host ::ng-deep .ngx-pagination {
-  .pagination-previous,.pagination-next{
-    a{
+  .pagination-previous,
+  .pagination-next {
+    a {
       color: gray;
     }
   }
@@ -182,7 +177,7 @@
   }
   a {
     padding: 4px 9px;
-    span{
+    span {
       color: gray;
     }
   }
