--- a/src/app/shared/components/home/footer/footer.component.scss
+++ b/src/app/shared/components/home/footer/footer.component.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/sass/main.scss";
+@import "../../../../../assets/sass/main.scss";
 
 .footer_container {
   padding: 16px 0;
