--- a/src/app/shared/components/home/header/header.component.scss
+++ b/src/app/shared/components/home/header/header.component.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/sass/main.scss";
+@import "../../../../../assets/sass/main.scss";
 .header {
   position: fixed;
   top: 0;
